--- a/3DVectorMath/MainWindow.xaml
+++ b/3DVectorMath/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_3DVectorMath.ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="800">
+        Title="MainWindow" Height="400  " Width="600">
     <Window.DataContext>
         <local:MainViewModel/>
     </Window.DataContext>
@@ -13,7 +13,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100" />
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="100" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -39,7 +39,10 @@
                     <TextBox Text="{Binding SecondVector.Length, Mode=OneWay}" Style="{StaticResource TextBox_readonly}"/>
                 </StackPanel>
             </GroupBox>
-            
+            <TextBlock Text="CalcMode"/>
+            <ComboBox ItemsSource="{Binding CalculationsModes}" DisplayMemberPath="Key" SelectedItem="{Binding CalcSelection}"/>
+        </StackPanel>
+        <StackPanel Grid.Column="3" Grid.Row="1">
             <GroupBox Header="Result" Margin="0,10" x:Name="GrpResult">
                 <StackPanel>
                     <TextBox Text="{Binding ResultVector.X, Mode=OneWay}" Style="{StaticResource TextBox_readonly}"/>
@@ -52,6 +55,8 @@
                     <TextBox Text="{Binding Angle, Mode=OneWay}" Style="{StaticResource TextBox_readonly}"/>
                     <Label Content="Angle Degrees"/>
                     <TextBox Text="{Binding AngleDegress, Mode=OneWay}" Style="{StaticResource TextBox_readonly}"/>
+                    <Label Content="Scalar"/>
+                    <TextBox Text="{Binding ScalarProduct, Mode=OneWay}" Style="{StaticResource TextBox_readonly}"/>
                 </StackPanel>
             </GroupBox>
         </StackPanel>
