--- a/3DVectorMath/App.xaml
+++ b/3DVectorMath/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:_3DVectorMath"
+             xmlns:converter="clr-namespace:_3DVectorMath.Converter"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <Style x:Key="TextBox_readonly" TargetType="TextBox">
@@ -12,5 +13,6 @@
             <Setter Property="TextAlignment" Value="Center"/>
             <EventSetter Event="PreviewTextInput" Handler="TextBox_PreviewTextInput" />
         </Style>
+        <converter:PointCollectionConverter x:Key="PointCollectionConverter"/>
     </Application.Resources>
 </Application>
