Replaced Lines with Arrows, added Negate Command

--- a/3DVectorMath/App.xaml
+++ b/3DVectorMath/App.xaml
@@ -13,6 +13,6 @@
             <Setter Property="TextAlignment" Value="Center"/>
             <EventSetter Event="PreviewTextInput" Handler="TextBox_PreviewTextInput" />
         </Style>
-        <converter:PointCollectionConverter x:Key="PointCollectionConverter"/>
+        <converter:PointConverter x:Key="PointConverter"/>
     </Application.Resources>
 </Application>
